CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.20rc1

	- The French and German option-conflict.tmpl template
	  files did not get installed (STR #148)
	- The cups.list.in file did not work when compiling
	  without shared libraries (STR #149)
	- The DSOFLAGS included the LDFLAGS, which causes
	  problems on at least HP-UX (STR #150)
	- The fax printer support did not keep track of the fax
	  capability bit (STR #144)
	- The appleLangDefault() function could leak a small
	  amount of memory (STR #145)
	- The ppdOpen() functions now add all Default attributes
	  to the attribute list; previously only certain
	  unassigned default attributes would be added (STR
	  #139)
	- The ppdEmitJCL() function wrote JCL commands to stdout
	  instead of the passed file pointer (STR #142)
	- The httpGets() function could, in certain states,
	  block waiting for data (STR #132)
	- The cupsEmitJCL() function not outputs an empty @PJL
	  command after the PJL language escape to work around
	  bugs in certain PJL implementations (STR #131)
	- The cupsEmit*() functions didn't set the orientation
	  value properly (STR #127)
	- The cups.spec file didn't list the rc2.d init
	  directory or the cupstestppd file (STR #134)


CHANGES IN CUPS V1.1.19

	- The GNU TLS code incorrectly used
	  gnutls_check_pending() instead of
	  gnutls_record_check_pending() (STR #128)
	- The ppdEmit() functions output "PageSize Custom"
	  instead of "CustomPageSize True" in the DSC comments.
	  Also, the custom page size code did not use the
	  ParamCustomPageSize attributes (STR #127)
	- The cupstestppd command did not list the conflicting
	  options (STR #123)
	- The lpq command did not ensure that there was
	  whitespace between the fields in the job listing (STR
	  #117)
	- The German web templates had errors (STR #119)
	- The configure script didn't specify the static
	  libraries properly when configuring with the
	  --disable-shared option (STR #104)