@@ -3,6 +3,11 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.20rc1
 
+	- The lpstat command now shows the correct interface
+	  script or PPD file, if any, for a print queue (STR #89)
+	- The lpstat command now shows the printer-state-message
+	  and printer-state-reasons attributes whenever they are
+	  not blank (STR #152)
 	- The French and German option-conflict.tmpl template
 	  files did not get installed (STR #148)
 	- The cups.list.in file did not work when compiling
